kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bami-backend
  namespace: bami
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bami-backend
  template:
    metadata:
      labels:
        app: bami-backend
    spec:
      containers:
        - name: bami-backend
          image: ghcr.io/teambami/backend:master
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
